recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: expected start of definition
	override def run() {
                 ^Koch:23: error: Unmatched closing brace '}' ignored here
}
^